--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
             --noconsole `
             --name "jEveAssetsCompanion" `
             --hidden-import=profile_checker `
+            --hidden-import=backup_service `
             --hidden-import=pystray._win32 `
             companion_app.py
 
