--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,16 @@ __pycache__/
 *.pyo
 *.pyd
 .Python
+*.egg-info/
+venv/
+.venv/
 
 # Logs
 *.log
+
+# Config / secrets
+.env
+config.json
 
 # IDE
 .vscode/
